Render header correctly on smallest screens

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,10 @@ h1 {
     font-size: 24px;
   }
 
+  @media (max-width: 320px) {
+    font-size: 18px;
+  }
+
   em {
     color: white;
     font-style: normal;
